# py-imessage-shortcuts

./: .gitignore  LICENSE  README.md  send-imessage.shortcut  setup.cfg
img/: logo.sketch
src/imessage/: __init__.py
