[metadata]
name = py-imessage-shortcuts
version = 1.0.2
author = Kevin Schaich
author_email = schaich.kevin@gmail.com
description = Send iMessages using Python through the Shortcuts app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kevinschaich/py-imessage-shortcuts
project_urls =
    Bug Tracker = https://github.com/kevinschaich/py-imessage-shortcuts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
